<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/groupadd"
            android:title="@string/invites" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_search"
            android:orderInCategory="101"
            android:title="@string/search"
            android:icon="@drawable/search_view" />



    </group>

</menu>