<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activites.InformationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/macrosInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/macros"
        style="@style/TextStyle"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/macronutrients"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/dietInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/diet_basics"
        style="@style/TextStyle"
        android:background="@drawable/jagody"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <Button
        android:id="@+id/exercisesInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/exercisesInfo"
        style="@style/TextStyle"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline25"
        android:background="@drawable/trainer"/>

    <Button
        android:id="@+id/workoutInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/workoutBasics"
        style="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline26"
        android:background="@drawable/dumbel"/>
</androidx.constraintlayout.widget.ConstraintLayout>