<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activites.DietActivity">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#CCFF6868"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <EditText
        android:id="@+id/exerciseDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#0000"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/descriptionDiter"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines ="4"
        android:maxLength ="2000"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline21" />

    <EditText
        android:id="@+id/exerciseWarnings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#CCFF6868"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:hint="@string/dietWarning"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines ="4"
        android:maxLength ="2000"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline22" />

    <Button
        android:id="@+id/uploadExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/uploadDiet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintStart_toEndOf="@+id/weightTV"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintVertical_bias="0.187" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addDiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_left_90"
            android:text="@string/addDiet"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dietList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_right_90"
            android:text="@string/checkDiets" />
    </RadioGroup>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />




</androidx.constraintlayout.widget.ConstraintLayout>